# backend/openapi.json
@@ -1,6 +1,22 @@
 {
   "components" : {
     "schemas" : {
+      "AllFlags" : {
+        "properties" : {
+          "flags" : {
+            "additionalProperties" : {
+              "type" : "boolean"
+            },
+            "type" : "object"
+          },
+          "revision" : {
+            "format" : "int64",
+            "type" : "integer"
+          }
+        },
+        "required" : [ "flags", "revision" ],
+        "type" : "object"
+      },
       "AuditEventView" : {
         "properties" : {
           "action" : {
@@ -185,6 +201,25 @@
         "required" : [ "createdAt", "createdBy", "flags", "id", "key", "name", "updatedAt", "updatedBy", "version" ],
         "type" : "object"
       },
+      "GroupFlags" : {
+        "properties" : {
+          "flags" : {
+            "additionalProperties" : {
+              "type" : "boolean"
+            },
+            "type" : "object"
+          },
+          "group" : {
+            "type" : "string"
+          },
+          "revision" : {
+            "format" : "int64",
+            "type" : "integer"
+          }
+        },
+        "required" : [ "flags", "group", "revision" ],
+        "type" : "object"
+      },
       "GroupSummary" : {
         "properties" : {
           "createdBy" : {
@@ -238,6 +273,18 @@
           }
         },
         "required" : [ "password", "username" ],
+        "type" : "object"
+      },
+      "OneFlag" : {
+        "properties" : {
+          "enabled" : {
+            "type" : "boolean"
+          },
+          "key" : {
+            "type" : "string"
+          }
+        },
+        "required" : [ "enabled", "key" ],
         "type" : "object"
       },
       "PageMetadata" : {
@@ -680,6 +727,105 @@
           }
         },
         "tags" : [ "token-controller" ]
+      }
+    },
+    "/api/v1/evaluate/flags" : {
+      "get" : {
+        "operationId" : "all",
+        "parameters" : [ {
+          "in" : "header",
+          "name" : "If-None-Match",
+          "required" : false,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/AllFlags"
+                }
+              }
+            },
+            "description" : "OK"
+          }
+        },
+        "tags" : [ "evaluation-controller" ]
+      }
+    },
+    "/api/v1/evaluate/flags/{groupKey}/{flagKey}" : {
+      "get" : {
+        "operationId" : "flag",
+        "parameters" : [ {
+          "in" : "path",
+          "name" : "groupKey",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "in" : "path",
+          "name" : "flagKey",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "in" : "header",
+          "name" : "If-None-Match",
+          "required" : false,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/OneFlag"
+                }
+              }
+            },
+            "description" : "OK"
+          }
+        },
+        "tags" : [ "evaluation-controller" ]
+      }
+    },
+    "/api/v1/evaluate/groups/{groupKey}" : {
+      "get" : {
+        "operationId" : "group",
+        "parameters" : [ {
+          "in" : "path",
+          "name" : "groupKey",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "in" : "header",
+          "name" : "If-None-Match",
+          "required" : false,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/GroupFlags"
+                }
+              }
+            },
+            "description" : "OK"
+          }
+        },
+        "tags" : [ "evaluation-controller" ]
       }
     }
   },
